# CCTVGDriveSync

./: README.md  check_hearbeat.sh  check_heartbeat.sh  clean_drive.sh  cleaner.sh  record_front_door.sh  recorder.sh  restart.sh  sync_videos.sh
cctv/: pyproject.toml  view_all.py
